--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -8,6 +8,16 @@
   <link rel="stylesheet" href="/stylesheets/style.css">
 </head>
 
+<header>
+  <h1>
+    <a href="/">Just Tech News</a>
+  </h1>
+  <nav>
+    <button id="logout" class="btn-no-style">Logout</button>
+    <a href="/login">Login</a>
+  </nav>
+</header>
+
 <body>
   <div class="wrapper">
     <header>
@@ -22,7 +32,8 @@
       Thanks for visiting!
     </footer>
   </div>
-
+  
+  <script src="/javascript/logout.js"></script>
 </body>
 
 </html>
