--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -13,8 +13,11 @@
     <a href="/">Just Tech News</a>
   </h1>
   <nav>
+    {{#if loggedIn}}
     <button id="logout" class="btn-no-style">Logout</button>
+    {{else}}
     <a href="/login">Login</a>
+    {{/if}}
   </nav>
 </header>
 
@@ -32,8 +35,10 @@
       Thanks for visiting!
     </footer>
   </div>
-  
+
+  {{#if loggedIn}}
   <script src="/javascript/logout.js"></script>
+  {{/if}}
 </body>
 
 </html>
